--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -7,11 +7,14 @@
         let isFirst = first;
         let isLast = last;
         "
-        class="list-group-item"
+        class="list-group-item d-flex justify-content-between align-items-center"
         [ngClass]="{'list-group-item-danger': isLast, 'list-group-item-success':isFirst}">
-            <span class="text-primary">{{ i + 1 }}.- </span>
-            <span>{{ character.name }} - </span>
-            <strong>Power: </strong>
-            <span>{{ character.power }}</span>
+            <div>
+                <span class="text-primary">{{ i + 1 }}.- </span>
+                <span>{{ character.name }} - </span>
+                <strong>Power: </strong>
+                <span>{{ character.power }}</span>
+            </div>
+            <button class="btn btn-danger" (click)="onDeleteCharacter(character.id)">X</button>
     </li>
 </ul>
